# py-df-cmp

./: .envrc  .gitignore  .justfile  README.md  TODO.md  app_dask.py  app_duckdb.py  app_explore.py  app_modin.py  app_pandas.py  app_polars.py  app_spark.py  app_vaex.py  main.py  pyproject.toml  utils.py
img/: results.xlsx
