[tool.poetry]
name = "data-py-bench"
version = "0.1.0"
description = "Data tools benchmark"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
polars = "^0.16.3"
pandas = "^1.5.3"

[tool.poetry.group.duckdb.dependencies]
duckdb = "^0.7.1"

[tool.poetry.group.dask.dependencies]
dask = {extras = ["complete"], version = "^2023.3.1"}

[tool.poetry.group.spark.dependencies]
pyspark = "^3.3.2"

[tool.poetry.group.dev.dependencies]
python-lsp-black = "^1.2.1"
python-lsp-ruff = "^1.2.0"
python-lsp-server = "^1.7.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
